# nuskell

./: .gitignore  .travis.yml  Enumerator.py  LICENSE  README  README.md  TODO.md  archival-pre-hg-versions.tgz  compare  compiler.py  crn_bisimulation_equivalence.py  crn_parser.py  crn_pathway_equivalence.py  dom_parser.py  generate_crn  interpreter.py  nuskell  pyproject.toml  requirements.txt  result.txt  result_condense.txt  setup.py  test.enum  test_suite  test_suite_condense  test_suite_output  test_suite_output_pbr  test_suite_scratch  ts_parser.py  verify  verify_condense  verify_wolfe
basis_finder/: __init__.py  basis_finder.py  basis_finder_integrated.py  crn_parser.py  ex1.crn  ex10.crn  ex2.crn  ex3.crn  ex4.crn  ex5.crn  ex6.crn  ex7.crn  ex8.crn  ex9.crn
crn/: casestudy4.dom  crn10.crn  crn11.crn  crn12.crn  crn14.crn  crn17.crn  crn18.crn  crn2.crn  crn3.crn  crn4.crn  crn6.crn  crn7.crn  crn8.crn  crn9.crn  dnadc1.dom  example_crn_features.txt  large1.crn  reaction2.crn  reaction4.crn
docs/: Makefile  analysis.rst  compiler.rst  conf.py  crn_equivalence.rst  crnutils.rst  crnverifier.rst  dsdcompiler.compiler.rst  dsdcompiler.interpreter.rst  dsdcompiler.objects.rst  dsdenumerator.rst  enumeration.rst  framework.rst  index.rst  interpreter.rst  intro.rst  ioutils.rst  nuskell.rst  objects.rst  parser.rst  peppercorn.rst  tlstutorial.rst  verifier.rst
examples/: test_suite  test_suite_table  timeout  verify  verify_condense  verify_wolfe
nuskell/: __init__.py  compare_schemes.py  compiler.py  crnutils.py  crnverifier.py  dsdenumerator.py  enumeration.py  framework.py  (+2 more)
(+295 files in other folders)
